--- a/Parcial2Ajavp/CpParcial2Ajavp/FrmSerie.resx
+++ b/Parcial2Ajavp/CpParcial2Ajavp/FrmSerie.resx
@@ -132,4 +132,7 @@
   <metadata name="erpFechaEstreno.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>637, 17</value>
   </metadata>
+  <metadata name="erpCategoria.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>806, 17</value>
+  </metadata>
 </root>
